Aligned flexbox arrangement correctly

--- a/styles/main.css
+++ b/styles/main.css
@@ -54,11 +54,11 @@ body{
     display: flex;
     flex-wrap: wrap;
     border: 0.5px solid black;
+    align-items: baseline;
+    /*min-height: 100px;*/
   }
   border: 0.5px solid rgb(89, 0, 255);
 }
-
-
 
 .accordion .container {
   border: 0.5px solid rgb(89, 0, 255);
